crates/fetch_hyper/src/snapshots/fetch_hyper__telemetry__tests__create_connection_attributes_emits_expected_keys.snap
---
source: crates/fetch_hyper/src/telemetry.rs
expression: sorted_attributes(&attrs)
---
[
    (
        "network.protocol.version",
        "1",
    ),
    (
        "server.address",
        "example.com",
    ),
    (
        "server.port",
        "8443",
    ),
    (
        "url.scheme",
        "https",
    ),
]
