crates/fetch_hyper/src/snapshots/fetch_hyper__telemetry__tests__create_connection_failure_attributes_includes_error_type.snap
---
source: crates/fetch_hyper/src/telemetry.rs
expression: sorted_attributes(&attrs)
---
[
    (
        "error.type",
        "connect",
    ),
    (
        "server.address",
        "example.com",
    ),
    (
        "server.port",
        "443",
    ),
    (
        "url.scheme",
        "https",
    ),
]
